--- a/traning2-1-6/traning2-1-6/Base.lproj/Main.storyboard
+++ b/traning2-1-6/traning2-1-6/Base.lproj/Main.storyboard
@@ -21,7 +21,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <webView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cUN-Z7-NGh">
+                            <webView contentMode="scaleToFill" fixedFrame="YES" scalesPageToFit="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cUN-Z7-NGh">
                                 <rect key="frame" x="0.0" y="20" width="375" height="589"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -44,10 +44,11 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nCu-nW-9ko">
-                                <rect key="frame" x="328" y="617" width="31" height="30"/>
+                                <rect key="frame" x="328" y="618" width="31" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="中止"/>
                                 <connections>
+                                    <action selector="loadCancelBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="O4V-cC-bDI"/>
                                     <action selector="stopLoading" destination="cUN-Z7-NGh" eventType="touchUpInside" id="D98-SJ-Fke"/>
                                 </connections>
                             </button>
@@ -63,12 +64,12 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                     <connections>
-                        <outlet property="webViewToGoogle" destination="cUN-Z7-NGh" id="4WQ-so-veZ"/>
+                        <outlet property="webViewToGoogle" destination="cUN-Z7-NGh" id="zje-a5-YKd"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="32.799999999999997" y="83.208395802098963"/>
+            <point key="canvasLocation" x="32.5" y="82.5"/>
         </scene>
     </scenes>
 </document>
