--- a/lesson2-1-3/lesson2-1-3/Base.lproj/Main.storyboard
+++ b/lesson2-1-3/lesson2-1-3/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -18,166 +18,43 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" fixedFrame="YES" image="http---magic.wizards.com-sites-mtg-files-images-wallpaper-Approach-of-the-Second-Sun_AKH_iPhone_Wallpaper.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="QZo-OQ-Opu">
-                                <rect key="frame" x="0.0" y="-1" width="375" height="667"/>
-                                <autoresizingMask key="autoresizingMask"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iPhone_Wallpaper01" translatesAutoresizingMaskIntoConstraints="NO" id="f5J-aK-Lzf" userLabel="BackgroundImage">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ny4-CN-OBY">
-                                <rect key="frame" x="100" y="317" width="174" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ny4-CN-OBY">
+                                <rect key="frame" x="155.66666666666669" y="344.66666666666669" width="104.00000000000006" height="48"/>
+                                <inset key="contentEdgeInsets" minX="15" minY="15" maxX="15" maxY="15"/>
                                 <state key="normal" title="NextImage"/>
                                 <connections>
-                                    <segue destination="HfR-3w-Bfb" kind="show" id="cRt-2n-DlV"/>
+                                    <action selector="nextImageBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="rym-qu-2Ws"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="f5J-aK-Lzf" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="CLZ-jF-Z64"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="f5J-aK-Lzf" secondAttribute="bottom" id="Hp3-zh-eDv"/>
+                            <constraint firstItem="f5J-aK-Lzf" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="IgH-td-C7E"/>
+                            <constraint firstAttribute="trailing" secondItem="f5J-aK-Lzf" secondAttribute="trailing" id="Z35-OK-Zaf"/>
+                            <constraint firstItem="f5J-aK-Lzf" firstAttribute="centerX" secondItem="ny4-CN-OBY" secondAttribute="centerX" id="fbT-oL-9T1"/>
+                            <constraint firstItem="f5J-aK-Lzf" firstAttribute="centerY" secondItem="ny4-CN-OBY" secondAttribute="centerY" id="vqv-Wu-pnr"/>
+                            <constraint firstItem="f5J-aK-Lzf" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="yDL-Fe-Am0"/>
+                            <constraint firstItem="f5J-aK-Lzf" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="yLf-K2-1NI"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="backgroundImageControl" destination="f5J-aK-Lzf" id="pnU-DH-zOW"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="136.80000000000001" y="131.78410794602701"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="eG7-6l-ZaX">
-            <objects>
-                <viewController id="HfR-3w-Bfb" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="QEE-Kv-MER"/>
-                        <viewControllerLayoutGuide type="bottom" id="eXi-Nb-a0z"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="Lxx-Sf-6h5">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" fixedFrame="YES" image="http---magic.wizards.com-sites-mtg-files-images-wallpaper-Cascading-Cataracts_AKH_iPhone_Wallpaper.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="UAB-rM-GQh">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aye-6j-p5c">
-                                <rect key="frame" x="100" y="318" width="174" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="NextImage"/>
-                                <connections>
-                                    <segue destination="Qn0-4a-czh" kind="modal" modalTransitionStyle="coverVertical" id="d7N-ee-alc"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="rOn-tV-ivH"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="beK-zf-34h" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="850" y="132"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="w2m-Ce-t2d">
-            <objects>
-                <viewController id="Qn0-4a-czh" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="Az8-QN-bio"/>
-                        <viewControllerLayoutGuide type="bottom" id="HyZ-iF-fFV"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="32G-kj-gJD">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" fixedFrame="YES" image="http---magic.wizards.com-sites-mtg-files-images-wallpaper-gOb8lvdMeM_HOU_iPhone_Wallpaper.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="uaN-TN-cVW">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v05-T5-khc">
-                                <rect key="frame" x="100" y="318" width="174" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="NextImage"/>
-                                <connections>
-                                    <segue destination="1iu-Eo-GnM" kind="modal" modalTransitionStyle="flipHorizontal" id="ObR-Mj-dy6"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="3RQ-hf-KZp"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Gim-nI-gYq" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1703" y="519"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="Vrg-CZ-57E">
-            <objects>
-                <viewController id="1iu-Eo-GnM" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="BSw-P7-6FC"/>
-                        <viewControllerLayoutGuide type="bottom" id="Dnt-5J-HS8"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="sOV-86-Aho">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" fixedFrame="YES" image="http---magic.wizards.com-sites-mtg-files-images-wallpaper-Overwhelming-Splendor_HOU_iPhone_Wallpaper.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="7jq-E7-eQ5">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lnp-aW-Gmh">
-                                <rect key="frame" x="100" y="318" width="174" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="NextImage"/>
-                                <connections>
-                                    <segue destination="5IM-FH-ncd" kind="modal" modalTransitionStyle="crossDissolve" id="EFc-tT-4N4"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="0YH-jZ-1TL"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="TMp-rn-trS" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2533.5999999999999" y="131.78410794602701"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="P9r-Uq-ktO">
-            <objects>
-                <viewController id="5IM-FH-ncd" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="Ptr-MO-3Zt"/>
-                        <viewControllerLayoutGuide type="bottom" id="c3R-z0-aaa"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="1SY-hQ-AHn">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" fixedFrame="YES" image="http---magic.wizards.com-sites-mtg-files-images-wallpaper-Wrath-of-God_AKH_iPhone_Wallpaper.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="fMd-B3-peY">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jbN-zN-O5D">
-                                <rect key="frame" x="100" y="318" width="174" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="NextImage"/>
-                                <connections>
-                                    <segue destination="BYZ-38-t0r" kind="modal" modalTransitionStyle="partialCurl" id="dJb-qm-Qju"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Op3-wz-pm3" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="3389.5999999999999" y="131.78410794602701"/>
-        </scene>
     </scenes>
     <resources>
-        <image name="http---magic.wizards.com-sites-mtg-files-images-wallpaper-Approach-of-the-Second-Sun_AKH_iPhone_Wallpaper.jpg" width="1040" height="1536"/>
-        <image name="http---magic.wizards.com-sites-mtg-files-images-wallpaper-Cascading-Cataracts_AKH_iPhone_Wallpaper.jpg" width="1040" height="1536"/>
-        <image name="http---magic.wizards.com-sites-mtg-files-images-wallpaper-Overwhelming-Splendor_HOU_iPhone_Wallpaper.jpg" width="1040" height="1536"/>
-        <image name="http---magic.wizards.com-sites-mtg-files-images-wallpaper-Wrath-of-God_AKH_iPhone_Wallpaper.jpg" width="1040" height="1536"/>
-        <image name="http---magic.wizards.com-sites-mtg-files-images-wallpaper-gOb8lvdMeM_HOU_iPhone_Wallpaper.jpg" width="1040" height="1536"/>
+        <image name="iPhone_Wallpaper01" width="1040" height="1536"/>
     </resources>
 </document>
