--- a/traning2-1-2/traning2-1-2/Base.lproj/Main.storyboard
+++ b/traning2-1-2/traning2-1-2/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina3_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -18,15 +18,22 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="BwSPGdrCIAAGznl.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="bk6-zN-ahx">
-                                <rect key="frame" x="16" y="20" width="343" height="639"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BwSPGdrCIAAGznl" translatesAutoresizingMaskIntoConstraints="NO" id="rGO-6J-5Ts" userLabel="mainImage">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="rGO-6J-5Ts" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="1by-JM-qgg"/>
+                            <constraint firstItem="rGO-6J-5Ts" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="9sa-Pf-Eok"/>
+                            <constraint firstItem="rGO-6J-5Ts" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="9vF-Ax-dUs"/>
+                            <constraint firstItem="rGO-6J-5Ts" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="MhB-Zq-HSw"/>
+                            <constraint firstAttribute="bottom" secondItem="rGO-6J-5Ts" secondAttribute="bottom" id="X65-xf-cYo"/>
+                            <constraint firstAttribute="trailing" secondItem="rGO-6J-5Ts" secondAttribute="trailing" id="t4S-HV-7tI"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -35,6 +42,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="BwSPGdrCIAAGznl.jpg" width="600" height="938"/>
+        <image name="BwSPGdrCIAAGznl" width="600" height="938"/>
     </resources>
 </document>
