--- a/traning2-1-11/traning2-1-11/Base.lproj/Main.storyboard
+++ b/traning2-1-11/traning2-1-11/Base.lproj/Main.storyboard
@@ -22,31 +22,39 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="x69-NA-agu">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsMultipleSelection="YES" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="x69-NA-agu">
                                 <rect key="frame" x="5" y="25" width="365" height="637"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="ByB-5W-xgQ">
-                                        <rect key="frame" x="0.0" y="28" width="365" height="44"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="tableCell" rowHeight="120" id="ByB-5W-xgQ">
+                                        <rect key="frame" x="0.0" y="28" width="365" height="120"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ByB-5W-xgQ" id="aqU-YO-QC1">
-                                            <rect key="frame" x="0.0" y="0.0" width="365" height="44"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="365" height="120"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B2Y-j1-UdV">
-                                                    <rect key="frame" x="126" y="0.0" width="143" height="36"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <imageView userInteractionEnabled="NO" tag="2" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jyr-0h-suS">
+                                                    <rect key="frame" x="5" y="5" width="106.5" height="80"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="80" id="chX-A4-Tqf"/>
+                                                        <constraint firstAttribute="width" secondItem="jyr-0h-suS" secondAttribute="height" multiplier="4:3" id="cm7-Vo-UD2"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B2Y-j1-UdV">
+                                                    <rect key="frame" x="121.5" y="5" width="238.5" height="109.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jyr-0h-suS">
-                                                    <rect key="frame" x="8" y="0.0" width="70" height="36"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" secondItem="jyr-0h-suS" secondAttribute="height" multiplier="3:4" id="cm7-Vo-UD2"/>
-                                                    </constraints>
-                                                </imageView>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="B2Y-j1-UdV" secondAttribute="trailing" constant="5" id="7ws-uO-WH9"/>
+                                                <constraint firstAttribute="bottom" secondItem="B2Y-j1-UdV" secondAttribute="bottom" constant="5" id="Lxp-aI-bkc"/>
+                                                <constraint firstItem="jyr-0h-suS" firstAttribute="top" secondItem="aqU-YO-QC1" secondAttribute="top" constant="5" id="NTM-3P-FDC"/>
+                                                <constraint firstItem="B2Y-j1-UdV" firstAttribute="leading" secondItem="jyr-0h-suS" secondAttribute="trailing" constant="10" id="YIe-gA-JgP"/>
+                                                <constraint firstItem="jyr-0h-suS" firstAttribute="leading" secondItem="aqU-YO-QC1" secondAttribute="leading" constant="5" id="ex0-zc-ONI"/>
+                                                <constraint firstItem="B2Y-j1-UdV" firstAttribute="top" secondItem="aqU-YO-QC1" secondAttribute="top" constant="5" id="tQz-ME-OVF"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
