Fix. #12の課題を修正しました。
・alpha値にBOOLを代入していた部分を、0か1に変更。
・最大文字数を定数に変更。
・Deligate接続を、コード側からでなくStorybord側で設定。

--- a/traning2-1-7/traning2-1-7/Base.lproj/Main.storyboard
+++ b/traning2-1-7/traning2-1-7/Base.lproj/Main.storyboard
@@ -27,6 +27,9 @@
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" returnKeyType="done"/>
+                                <connections>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="Xvn-uO-UyD"/>
+                                </connections>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Alert: 30文字以内で入力してください。" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DHQ-y6-hUF" userLabel="MaxLengthAlateLabel">
                                 <rect key="frame" x="40" y="110" width="309" height="21"/>
